@@ -1,4 +1,10 @@
-2005-07-25 Scott Dattalo <scott@dattalo.com>
+2005-07-26 Scott Dattalo <scott@dattalo.com>
+	* src/16bit-instructions.cc,
+	regression/instructions_16bit/instructions_16bit.asm: Fixed bug
+	with 16bit processors Table Read (more index vs address). Thanks
+	to Peter Onion for pointing this (and other 16bit stuff out).
+	
+2005-07-26 Scott Dattalo <scott@dattalo.com>
 	* src/i2c-ee.cc, src/i2c-ee.h, src/ioports.cc, src/ioports.h,
 	src/p12x.cc, src/stimuli.cc, src/stimuli.h: Fixed 12CE51x internal
 	eeprom peripheral. 
